<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">gustavo_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_avalia_es_pr_v">Avaliações prévias</string>
  <string name="lbl_meus_favoritos">Meus favoritos</string>
  <string name="msg_1_202_555_0">+1  202  555  0142 </string>
  <string name="lbl_comida_japonesa">Comida Japonesa</string>
  <string name="msg_tell_us_about_y">Tell us about your experience</string>
  <string name="msg_detalhes_pessoa">Detalhes Pessoais</string>
  <string name="msg_chef_2_espec">Chef 2 -  Especialista em Vinhos </string>
  <string name="msg_neymar_da_silva">Neymar Da Silva Junior</string>
  <string name="lbl_categorias">Categorias</string>
  <string name="lbl_seu">seu</string>
  <string name="msg_escreva_abaixo">Escreva abaixo seu numero de telefone para receber um codigcodigo de confirmação</string>
  <string name="msg_chef_3_especi">Chef 3 - Especialista em Carnes</string>
  <string name="lbl_j_tem_login">Já tem login?</string>
  <string name="lbl_frutos_do_m">Frutos do M..</string>
  <string name="msg_restaurantes_me">Restaurantes melhor avaliados</string>
  <string name="lbl_55">+55</string>
  <string name="lbl_meus_favoritos2">Meus Favoritos</string>
  <string name="msg_adorei_o_banhei">Adorei o banheiro</string>
  <string name="lbl_numero">Numero</string>
  <string name="lbl_54_avalia_es">(54 avaliações)</string>
  <string name="msg_endere_o_de_ema">Endereço de email</string>
  <string name="lbl_vegetariano">Vegetariano</string>
  <string name="lbl_restaurantes">Restaurantes</string>
  <string name="lbl_frutos_do_mar">Frutos do Mar</string>
  <string name="msg_adicionar_avali">Adicionar Avaliação</string>
  <string name="lbl_frutos_do_mar2">Frutos do mar</string>
  <string name="lbl_neymar">Neymar</string>
  <string name="msg_qual_seu_numero">Qual seu Numero de Telefone?</string>
  <string name="lbl_cadastro_r_pido">Cadastro Rápido</string>
  <string name="lbl_confirmar_senha">Confirmar Senha</string>
  <string name="msg_mensagem_de_tex">Mensagem de Texto</string>
  <string name="msg_j_tem_conta_l">já tem conta? Login</string>
  <string name="lbl_de">de</string>
  <string name="lbl_bem_vindo">Bem Vindo!</string>
  <string name="msg_selecione_uma_d">Selecione uma das opções para recupera sua senha</string>
  <string name="msg_n_o_recebeu_o_c">Não recebeu o código?</string>
  <string name="lbl_neymar_junior">Neymar Junior</string>
  <string name="lbl_32_minutes_ago">32 minutes ago</string>
  <string name="msg_insira_o_codigo">Insira o codigo de verificação</string>
  <string name="lbl_voltar2">voltar</string>
  <string name="lbl_comida_mex">Comida Mex</string>
  <string name="msg_continue_with_g">Continue with google</string>
  <string name="msg_reenviar_co_dig">Reenviar Coódigo de Confirmação (1:23)</string>
  <string name="msg_numero_de_telef">Numero de Telefone</string>
  <string name="lbl_40028922">40028922</string>
  <string name="msg_verefique_seu_n">Verefique seu Numero</string>
  <string name="lbl_nau">Nau</string>
  <string name="lbl_write_reviews">Write Reviews</string>
  <string name="lbl_62_avalia_es">(62 avaliações)</string>
  <string name="msg_chico_especia">Chico - Especialista em Massas</string>
  <string name="lbl_proximo">Proximo</string>
  <string name="msg_considerado_o_m">Considerado o maior e melhor restaurante do Brasil, com especialidade em frutos do mar, o Coco Bambu possui um amplo e variado cardápio, com comidas e bebidas deliciosamente diferenciadas, feitas com ingredientes frescos da mais alta qualidade. Os pratos são bem servidos e toda essa excelência é apresentada a preços acessíveis.</string>
  <string name="lbl_trocar_a_senha">Trocar a Senha</string>
  <string name="msg_endere_o_de_ema2">Endereço de Email</string>
  <string name="lbl_self_service">Self-Service</string>
  <string name="lbl_fast_food">Fast Food</string>
  <string name="msg_massa_muito_bem">Massa muito bem cozinha no ponto certo enquanto o molho combina perfeitamente com a proposta do prato</string>
  <string name="msg_entre_na_sua_co">Entre na sua conta</string>
  <string name="lbl_fera_ehtoiz">Fera #ehtoiz</string>
  <string name="lbl_50_avalia_es">(50 avaliações)</string>
  <string name="msg_como_funcionamo">Como Funcionamos?</string>
  <string name="lbl_5_0_lbs">5.0 lbs</string>
  <string name="lbl_87_avalia_es">(87 avaliações)</string>
  <string name="msg_neymar_jogador">Neymar.jogador@gmail.com</string>
  <string name="lbl_telefone">Telefone?</string>
  <string name="lbl_categories">Categories</string>
  <string name="msg_o_intuiro_do_no">O intuiro do nosso aplicativo é oferecer avaliação para os restaurantes em troca de recompensas para seus clientes.</string>
  <string name="msg_aprenda_a_mexer">Aprenda a mexer nas proximas páginas</string>
  <string name="lbl_4_5">4.5</string>
  <string name="lbl_carla_maria">Carla Maria</string>
  <string name="msg_pesquise_restau">Pesquise restaurantes</string>
  <string name="lbl_comida_jap">Comida Jap..</string>
  <string name="lbl_create_account">Create account</string>
  <string name="msg_o_que_voc_acho">O que Você Achou?</string>
  <string name="msg_gostei_da_comid">Gostei da comida, mas o drinks não são tão bons</string>
  <string name="lbl_comida_bras">Comida Bras..</string>
  <string name="lbl_comida_mexicana">Comida Mexicana</string>
  <string name="lbl_lembrar_sempre">Lembrar Sempre</string>
  <string name="msg_avalia_es_dos">Avaliações dos especialistas</string>
  <string name="lbl_16">-16%</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consetetur &#13;
sadipscing elitr, sed diam nonumy</string>
  <string name="lbl_j_tem_conta">já tem conta? </string>
  <string name="msg_avalie_o_restau">Avalie o Restaurante em Troca de Beneficios</string>
  <string name="msg_garanta_cupons">Garanta cupons
para seus restaurantes
favoritos!</string>
  <string name="msg_verifique_seu_n">Verifique seu numero</string>
  <string name="msg_muito_boa_a_com">Muito boa a comida gente!</string>
  <string name="lbl_avafast">AvaFast</string>
  <string name="msg_receba_um_novo">Receba um novo código</string>
  <string name="lbl_endere_o">Endereço</string>
  <string name="lbl_bem_vindo2">Bem Vindo</string>
  <string name="msg_comida_brasilei">Comida Brasileira</string>
  <string name="msg_avalie_e_ganhe">Avalie e ganhe pontos </string>
  <string name="lbl_nazo">Nazo</string>
  <string name="lbl_sair_da_conta">Sair da conta</string>
  <string name="msg_servi_o_impec_v">Serviço impecável, reflete muito bem o nível das fotos e descrições</string>
  <string name="lbl_criar_conta">Criar conta</string>
  <string name="lbl_sobre_mim">Sobre mim</string>
  <string name="lbl_coco_bambu">Coco Bambu</string>
  <string name="lbl_voltar">Voltar</string>
  <string name="msg_recuperar_a_sen">Recuperar a Senha</string>
  <string name="lbl_chef_1">Chef 1 </string>
  <string name="lbl_login">Login</string>
  <string name="msg_avalia_es_aute">Avaliações autenticadas</string>
  <string name="lbl_sabrina">Sabrina </string>
  <string name="lbl_nau2">NAU</string>
  <string name="lbl_qual">Qual</string>
  <string name="lbl_welcome_back">Welcome back !</string>
  <string name="msg_endere_o_de_em">Endereço de  email</string>
  <string name="msg_fa_a_cadastro_e">Faça cadastro e aproveite nossos serviços</string>
  <string name="lbl_89_reviews">(89 reviews)</string>
  <string name="lbl_senha_atual">Senha atual</string>
  <string name="lbl_black_grapes">Black Grapes</string>
  <string name="lbl_chico_moeda">Chico Moeda</string>
  <string name="lbl_mangai">Mangai</string>
  <string name="msg_minhas_avalia">Minhas Avaliações</string>
  <string name="msg_como_resgatar_o">Como resgatar os pontos</string>
</resources>
