<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="otpScreenVM" type="com.gustavosapplication.app.modules.otpscreen.data.viewmodel.OtpScreenVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOtpscreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearTitleBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright_white_a700"/>

                <TextView
                    android:id="@+id/txtVerifiqueseun"
                    style="@style/txtPoppinsmedium18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_65pxh"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@{otpScreenVM.otpScreenModel.txtVerifiqueseun}"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/msg_verifique_seu_n" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/txtVerefiqueseuN"
            style="@style/txtPoppinssemibold25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_85pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:singleLine="true"
            android:text="@{otpScreenVM.otpScreenModel.txtVerefiqueseuN}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_verefique_seu_n" />

        <TextView
            android:id="@+id/txtInsiraocodigo"
            style="@style/txtPoppinsmedium15_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:letterSpacing="0.02"
            android:singleLine="true"
            android:text="@{otpScreenVM.otpScreenModel.txtInsiraocodigo}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_insira_o_codigo" />

        <com.mukesh.OtpView
            android:id="@+id/otpViewOtpview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:focusableInTouchMode="true"
            android:hint="@string/lbl_16"
            android:inputType="number"
            android:itemBackground="@color/gray_900"
            android:textColor="@color/white_A700"
            android:textColorHint="#546E7A"
            android:textSize="@dimen/_20pxh"
            app:OtpItemCount="6"
            app:OtpItemHeight="@dimen/_60pxv"
            app:OtpItemSpacing="@dimen/_10pxh"
            app:OtpItemWidth="@dimen/_55pxh"
            app:OtpLineColor="@android:color/transparent"
            app:OtpViewType="rectangle"
            tools:ignore="SpUsage,TextSizeCheck,VisualLintTextFieldSize,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProximo"
            style="@style/btnSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@string/lbl_proximo"
            android:textAllCaps="false"
            tools:ignore="TextSizeCheck,VisualLintButtonSize"
            tools:text="@string/lbl_proximo" />

        <TextView
            android:id="@+id/txtNorecebeuoc"
            style="@style/txtPoppinslight15_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:ellipsize="end"
            android:letterSpacing="0.02"
            android:singleLine="true"
            android:text="@{otpScreenVM.otpScreenModel.txtNorecebeuoc}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_n_o_recebeu_o_c" />

        <TextView
            android:id="@+id/txtRecebaumnovo"
            style="@style/txtPoppinsmedium15_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:ellipsize="end"
            android:letterSpacing="0.02"
            android:singleLine="true"
            android:text="@{otpScreenVM.otpScreenModel.txtRecebaumnovo}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_receba_um_novo" />
    </LinearLayout>
</layout>
