<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="verifyNumberVM" type="com.gustavosapplication.app.modules.verifynumber.data.viewmodel.VerifyNumberVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearVerifynumber"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearTitleBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVerifiqueseun"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_65pxh"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@{verifyNumberVM.verifyNumberModel.txtVerifiqueseun}"
                    style="@style/txtPoppinsmedium18" tools:text="@string/msg_verifique_seu_n"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtQualseuNumero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.04"
            android:text="@{verifyNumberVM.verifyNumberModel.txtQualseuNumero}"
            style="@style/txtPoppinssemibold25_2" tools:text="@string/msg_qual_seu_numero"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtEscrevaabaixo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.02"
            android:text="@{verifyNumberVM.verifyNumberModel.txtEscrevaabaixo}"
            style="@style/txtPoppinsmedium15_1" tools:text="@string/msg_escreva_abaixo"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearPhoneField"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowfiftyfive"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFiftyFive"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_64pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_weight="0.28"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:singleLine="true"
                    android:text="@{verifyNumberVM.verifyNumberModel.txtFiftyFive}"
                    style="@style/txtPoppinsmedium15_1" tools:text="@string/lbl_55"/>
                <View android:background="@color/white_A700"
                    android:id="@+id/lineLineOne"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.01" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt40028922"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginEnd="@dimen/_172pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_weight="0.71"
                    android:layout_width="0dp"
                    android:letterSpacing="0.02"
                    android:singleLine="true"
                    android:text="@{verifyNumberVM.verifyNumberModel.txt40028922}"
                    style="@style/txtPoppinsmedium15_1" tools:text="@string/lbl_40028922"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnProximo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_proximo"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_proximo"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtReenviarCodig"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.02" android:singleLine="true"
            android:text="@{verifyNumberVM.verifyNumberModel.txtReenviarCodig}"
            style="@style/txtPoppinslight15_1" tools:text="@string/msg_reenviar_co_dig"/>
    </LinearLayout>
</layout>
