<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="aboutMeVM" type="com.gustavosapplication.app.modules.aboutme.data.viewmodel.AboutMeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAboutme"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearTitleBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleblack_900">
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_43pxv"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="@dimen/_23pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>

            <TextView
                android:id="@+id/txtSobremim"
                style="@style/txtPoppinsmedium18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_marginEnd="@dimen/_170pxh"
                android:layout_marginBottom="@dimen/_42pxv"
                android:layout_weight="0.82"
                android:ellipsize="end"
                android:letterSpacing="0.03"
                android:singleLine="true"
                android:text="@{aboutMeVM.aboutMeModel.txtSobremim}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/lbl_sobre_mim" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDetalhesPessoa"
            style="@style/txtPoppinssemibold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{aboutMeVM.aboutMeModel.txtDetalhesPessoa}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_detalhes_pessoa" />
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowvector"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
            <ImageView android:id="@+id/imageVector"
                android:layout_height="@dimen/_24pxh"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="@dimen/_24pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector_white_a700"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700"/>

            <TextView
                android:id="@+id/txtNeymarDaSilva"
                style="@style/txtPoppinsmedium15_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_132pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_weight="0.89"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:singleLine="true"
                android:text="@{aboutMeVM.aboutMeModel.txtNeymarDaSilva}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/msg_neymar_da_silva" />
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowvectorOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
            <ImageView android:id="@+id/imageVectorOne"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="@dimen/_23pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector_white_a700_17x23"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700_17x23"/>

            <TextView
                android:id="@+id/txtEmail"
                style="@style/txtPoppinsmedium15_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_87pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_weight="0.91"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:singleLine="true"
                android:text="@{aboutMeVM.aboutMeModel.txtEmail}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/msg_neymar_jogador" />
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowvectorTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
            <ImageView android:id="@+id/imageVectorTwo"
                android:layout_height="@dimen/_23pxh"
                android:layout_marginBottom="@dimen/_19pxv"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="@dimen/_22pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/txtPoppinsmedium15_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_181pxh"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_weight="0.86"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:singleLine="true"
                android:text="@{aboutMeVM.aboutMeModel.txtLanguage}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/msg_1_202_555_0" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTrocaraSenha"
            style="@style/txtPoppinssemibold18_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{aboutMeVM.aboutMeModel.txtTrocaraSenha}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_trocar_a_senha" />

        <EditText
            android:id="@+id/etGroupNine"
            style="@style/etSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:background="@drawable/rectangle_bg_gray_900_radius_5"
            android:drawableStart="@drawable/img_group_5"
            android:drawablePadding="@dimen/_27pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_senha_atual"
            android:inputType="text"
            android:letterSpacing="0.02"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:singleLine="true"
            android:text="@={aboutMeVM.aboutMeModel.etGroupNineValue}"
            android:textColorHint="@color/white_A700"
            tools:ignore="Autofill,TextSizeCheck,VisualLintTextFieldSize" />
        <ImageView android:id="@+id/imageGroupEight"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_60pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="@dimen/_380pxh"
            android:scaleType="fitXY" android:src="@drawable/img_group8"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group8"/>

        <EditText
            android:id="@+id/etGroupTen"
            style="@style/etSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:background="@drawable/rectangle_bg_gray_900_radius_5"
            android:drawableStart="@drawable/img_group_5"
            android:drawablePadding="@dimen/_27pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_confirmar_senha"
            android:inputType="text"
            android:letterSpacing="0.02"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@={aboutMeVM.aboutMeModel.etGroupTenValue}"
            android:textColorHint="@color/white_A700"
            tools:ignore="Autofill,TextSizeCheck,VisualLintTextFieldSize" />
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnProximo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_173pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_proximo"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_proximo"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>
</layout>
